--- a/plugins/struts2-junit5-user-custom-plugin/pom.xml
+++ b/plugins/struts2-junit5-user-custom-plugin/pom.xml
@@ -77,7 +77,7 @@
     <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-compress</artifactId>
-      <version>1.21</version>
+      <version>${commons-compress.version}</version>
       <scope>test</scope>
     </dependency>
 
@@ -157,7 +157,7 @@
     <dependency>
       <groupId>javax.portlet</groupId>
       <artifactId>portlet-api</artifactId>
-      <version>3.0.1</version>
+      <version>${portlet-api.version}</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
