--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,7 @@
 
     <javax.annotation-api.version>1.3.2</javax.annotation-api.version>
     
-    <jasperreports.version>6.20.3</jasperreports.version>
+    <jasperreports.version>6.20.4</jasperreports.version>
 
     <lombok.version>1.18.26</lombok.version>
 
@@ -66,12 +66,16 @@
     <maven-clean-plugin.version>3.2.0</maven-clean-plugin.version>
     <maven-resources-plugin.version>3.3.1</maven-resources-plugin.version>
     <maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
-    <maven-surefire-plugin.version>3.0.0</maven-surefire-plugin.version>
-    <maven-failsafe-plugin.version>3.0.0</maven-failsafe-plugin.version>
+    <maven-surefire-plugin.version>3.1.0</maven-surefire-plugin.version>
+    <maven-failsafe-plugin.version>3.1.0</maven-failsafe-plugin.version>
     <maven-war-plugin.version>3.3.2</maven-war-plugin.version>
     <maven-install-plugin.version>3.1.1</maven-install-plugin.version>
     <maven-deploy-plugin.version>3.1.1</maven-deploy-plugin.version>
     <maven-toolchains-plugin.version>3.1.0</maven-toolchains-plugin.version>
+    
+    <!-- Struts JUnit Plugin -->
+    <commons-compress.version>1.23.0</commons-compress.version>
+    <portlet-api.version>3.0.1</portlet-api.version>
   </properties>
 
   <dependencyManagement>
