디펜더봇 경고 수정
- https://github.com/fp024/struts2-study/security/dependabot/1

HSQLBD를 버전화를 했는데, 이 프로젝트만 누락 했나보다, 2.7.2 버전이 사용되도록 수정 했음.

--- a/annotations/annotations-struts/pom.xml
+++ b/annotations/annotations-struts/pom.xml
@@ -62,7 +62,7 @@
     <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-compress</artifactId>
-      <version>1.21</version>
+      <version>${commons-compress.version}</version>
     </dependency>
 
     <dependency>
@@ -85,7 +85,7 @@
     <dependency>
       <groupId>org.hsqldb</groupId>
       <artifactId>hsqldb</artifactId>
-      <version>2.6.1</version>
+      <version>${hsqldb.version}</version>
     </dependency>
 
     <!-- Java 8 환경에서 최신 4.x 버전이 호환가능함. -->
