--- a/introducing-interceptors/interceptors-struts/pom.xml
+++ b/introducing-interceptors/interceptors-struts/pom.xml
@@ -87,7 +87,7 @@
 
     <dependency>
       <groupId>org.mockito</groupId>
-      <artifactId>mockito-junit-jupiter</artifactId>
+      <artifactId>mockito-core</artifactId>
       <version>${mockito.version}</version>
       <scope>test</scope>
     </dependency>
