툴체인 테스트

--- a/.github/workflows/maven-build.yml
+++ b/.github/workflows/maven-build.yml
@@ -22,7 +22,7 @@ jobs:
       with:
         java-version: '17'
         distribution: 'temurin'
-        mvn-toolchain-id: '17'
+        toolchains: '[{"jdk": {"version": "17", "vendor": "temurin"}}]'
         server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
         settings-path: ${{ github.workspace }} # location for the settings.xml file
 
