툴체인 테스트
자꾸 실패하는데... 그냥 별도 일회용 리포지터리 만들어서 테스트 하는게 낫지 않을까? ㅠㅠ

--- a/.github/workflows/maven-build.yml
+++ b/.github/workflows/maven-build.yml
@@ -28,7 +28,7 @@ jobs:
       with:
         toolchains: |
           [
-            {"jdkVersion": "17", "jdkHome": "${{JAVA_HOME}}"}
+            {"jdkVersion": "17", "jdkHome": "$JAVA_HOME"}
           ]
 
     - name: Build with Maven (struts2-junit5-user-custom-plugin install)
