--- a/.github/workflows/maven-build.yml
+++ b/.github/workflows/maven-build.yml
@@ -20,6 +20,7 @@ jobs:
     - name: Set up JDK 17
       uses: actions/setup-java@v4
       with:
+        id: setup-java-17
         java-version: '17'
         distribution: 'temurin'
         server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
@@ -28,7 +29,7 @@ jobs:
       with:
         toolchains: |
           [
-            {"jdkVersion": "17", "jdkHome": "{{$JAVA_HOME}}"}
+            {"jdkVersion": "17", "jdkHome": "${{ steps.setup-java-17.outputs.jdk-path }}"}
           ]
 
     - name: Build with Maven (struts2-junit5-user-custom-plugin install)
