툴 체인 테스트

--- a/.github/workflows/maven-build.yml
+++ b/.github/workflows/maven-build.yml
@@ -29,7 +29,7 @@ jobs:
       with:
         toolchains: |
           [
-            {"jdkVersion": "17", "jdkHome": "${{ steps.setup-java-17.outputs.jdk-path }}"}
+            {"jdkVersion": "17", "jdkHome": "${{ env.JAVA_HOME }}"}
           ]
 
     - name: Build with Maven (struts2-junit5-user-custom-plugin install)
