--- a/.github/workflows/maven-build.yml
+++ b/.github/workflows/maven-build.yml
@@ -20,17 +20,26 @@ jobs:
     - name: Set up JDK 17
       id: setup-java-17
       uses: actions/setup-java@v4
-      with:
-        java-version: '17'
+      with:                
         distribution: 'temurin'
         server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
         settings-path: ${{ github.workspace }} # location for the settings.xml file
-    - uses: cactuslab/maven-toolchains-xml-action@v1
-      with:
-        toolchains: |
-          [
-            {"jdkVersion": "17", "jdkHome": "${{ steps.setup-java-17.outputs.java-home }}"}
-          ]
+        mvn-toolchain-vendor: Eclipse Temurin
+        java-version: |
+          8
+          11
+          17
+        mvn-toolchain-id: |
+          8
+          11
+          17
+
+    # - uses: cactuslab/maven-toolchains-xml-action@v1
+    #   with:
+    #     toolchains: |
+    #       [
+    #         {"jdkVersion": "17", "jdkHome": "${{ env.JAVA_HOME }}"}
+    #       ]
 
     - name: Build with Maven (struts2-junit5-user-custom-plugin install)
       run: mvn -B install --file pom.xml
