--- a/.github/workflows/maven-build.yml
+++ b/.github/workflows/maven-build.yml
@@ -33,21 +33,11 @@ jobs:
           8
           11
           17
-
-    # - uses: cactuslab/maven-toolchains-xml-action@v1
-    #   with:
-    #     toolchains: |
-    #       [
-    #         {"jdkVersion": "8", "jdkHome": "${{ env.JAVA_HOME_8_x64 }}"},
-    #         {"jdkVersion": "11", "jdkHome": "${{ env.JAVA_HOME_11_x64 }}"},
-    #         {"jdkVersion": "17", "jdkHome": "${{ env.JAVA_HOME_17_x64 }}"}
-    #       ]
-
     - name: Build with Maven (struts2-junit5-user-custom-plugin install)
-      run: mvn -B install --file pom.xml -t toolchains.xml
+      run: mvn -B clean install --file pom.xml -t toolchains.xml
 
     - name: Build with Maven (Projects)
-      run: mvn -B install --file struts2-study-parent/pom.xml -t toolchains.xml
+      run: mvn -B clean test --file struts2-study-parent/pom.xml -t toolchains.xml
 
 #    - name: Publish to GitHub Packages Apache Maven
 #      run: mvn deploy -s $GITHUB_WORKSPACE/settings.xml
