--- a/.github/workflows/maven-build.yml
+++ b/.github/workflows/maven-build.yml
@@ -17,8 +17,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    - name: Set up JDK 8, 11, 17
-      id: setup-java-8-11-17
+    - name: Set up JDK 17
+      id: setup-java-17
       uses: actions/setup-java@v4
       with:                
         distribution: 'temurin'
@@ -27,12 +27,8 @@ jobs:
         mvn-toolchain-vendor: Eclipse Temurin
         cache: 'maven'
         java-version: |
-          8
-          11
           17
         mvn-toolchain-id: |
-          8
-          11
           17
     - name: Build with Maven (struts2-junit5-user-custom-plugin install)
       run: mvn -B clean install --file pom.xml -t toolchains.xml
