--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,9 @@
     <!-- Servlet 버전 -->
     <javax.servlet-api.version>4.0.1</javax.servlet-api.version>
     <javax.servlet.jsp-api.version>2.3.3</javax.servlet.jsp-api.version>
-    <apache.taglibs-standard-impl.version>1.2.5</apache.taglibs-standard-impl.version>
+    
+    <!-- https://mvnrepository.com/artifact/org.glassfish.web/javax.servlet.jsp.jstl -->
+    <javax.servlet.jsp.jstl.version>1.2.5</javax.servlet.jsp.jstl.version>
 
     <struts2.version>6.3.0.2</struts2.version>
     <spring.platformVersion>5.3.31</spring.platformVersion>
@@ -55,8 +57,10 @@
     <!-- struts2-convention-plugin에서 Java 17 바이트 코드 해석을 못해서, 버전을 올렸다. -->
     <asm.version>9.6</asm.version>
 
-    <jetty.version>10.0.18</jetty.version>
-    <jettyContextPath>/${project.build.finalName}</jettyContextPath>
+    <jetty.version>12.0.4</jetty.version>
+    <!-- <jettyContextPath>/${project.build.finalName}</jettyContextPath>-->
+    <!-- 예제 프로젝트로서 개별 실행하므로 경로를 ContextPath로 나눌 필요는 없다. -->
+    <jettyContextPath>/</jettyContextPath>
     
     <!-- 현시점 환경에서 다시 시도해봤을 때, Jetty 리로딩에 문제가 없어서 Enter를 누르면 재시작 되도록 0으로 설정을 바꾸었다. -->
     <!-- 그런데, 이 프로젝트는 아니고, 다른 스프링 프로젝트에서.. XML 기반 설정은 문제가 없는데, Java Config 기반 설정으로 하면 문제가 여전히 있다. -->
