--- a/struts2-study-parent/pom.xml
+++ b/struts2-study-parent/pom.xml
@@ -9,7 +9,7 @@
     <groupId>org.fp024.struts2.study</groupId>
     <artifactId>struts2-study</artifactId>
     <version>1.0.0-SNAPSHOT</version>
-    <relativePath>../</relativePath>
+    <relativePath>../pom.xml</relativePath>
   </parent>
 
   <artifactId>struts2-study-parent</artifactId>
