Jetty12 버전업 이후 동작확인 - JasperReports Tutorial
Spring이나 ServletContextListener를 활용해서 getRealPath() 얻어오는 부분이 있는데...
Jetty 12 에서는 null을 반환해서 제대로 할 수 가 없다.  Tomcat 9, Jetty 10에서는 문제가 없던 부분임.

그래서 일단  jasper-reports-struts , jasper-reports-with-contextlistener
두개 예제는 Jetty 10을 유지했다.

그런과정에서 Jetty의 속성들을 프로퍼티로 파라미터화 했음.

처음에 pom.xml 파일을 분리할까 하다가 아직은 Jetty 10과 12의 설정 속성이 차이없어서
그냥 파라미터로 했는데, 나중에는 분리하는 것이 나을 것 같다.

--- a/jasper-reports-tutorial/jasper-reports-with-contextlistener/pom.xml
+++ b/jasper-reports-tutorial/jasper-reports-with-contextlistener/pom.xml
@@ -14,6 +14,19 @@
   <name>${project.artifactId} - Struts 2 Study Maven Webapp</name>
   <url>https://github.com/fp024/struts2-study/tree/master/jasper-reports-tutorial</url>
   
+  <properties>
+    <jetty.version>${jetty10.version}</jetty.version>
+    <jetty-plugin-group-id>${jetty10-plugin-group-id}</jetty-plugin-group-id>
+    <jetty-plugin-artifact-id>${jetty10-plugin-artifact-id}</jetty-plugin-artifact-id>
+    
+    <jetty-root-jstl-group-id>${jetty10-root-jstl-group-id}</jetty-root-jstl-group-id>
+    <jetty-root-jstl-artifact-id>apache-jstl</jetty-root-jstl-artifact-id>
+    
+    <jetty-exclude-jstl-group-id>${jetty10-exclude-jstl-group-id}</jetty-exclude-jstl-group-id>
+    <jetty-exclude-jstl-artifact-id>${jetty10-exclude-jstl-artifact-id}</jetty-exclude-jstl-artifact-id>
+    <jetty-exclude-jstl-version>${jetty10-exclude-jstl-version}</jetty-exclude-jstl-version>
+  </properties>
+
   <dependencies>
     <dependency>
       <groupId>org.apache.struts</groupId>
