--- a/jasper-reports-tutorial/jasper-reports-struts/pom.xml
+++ b/jasper-reports-tutorial/jasper-reports-struts/pom.xml
@@ -13,6 +13,20 @@
   <packaging>war</packaging>
   <name>${project.artifactId} - Struts 2 Study Maven Webapp</name>
   <url>https://github.com/fp024/struts2-study/tree/master/jasper-reports-tutorial</url>
+  
+  <properties>
+    <jetty.version>${jetty10.version}</jetty.version>
+    <jetty-plugin-group-id>${jetty10-plugin-group-id}</jetty-plugin-group-id>
+    <jetty-plugin-artifact-id>${jetty10-plugin-artifact-id}</jetty-plugin-artifact-id>
+    
+    <jetty-root-jstl-group-id>${jetty10-root-jstl-group-id}</jetty-root-jstl-group-id>
+    <jetty-root-jstl-artifact-id>apache-jstl</jetty-root-jstl-artifact-id>
+    
+    <jetty-exclude-jstl-group-id>${jetty10-exclude-jstl-group-id}</jetty-exclude-jstl-group-id>
+    <jetty-exclude-jstl-artifact-id>${jetty10-exclude-jstl-artifact-id}</jetty-exclude-jstl-artifact-id>
+    <jetty-exclude-jstl-version>${jetty10-exclude-jstl-version}</jetty-exclude-jstl-version>
+  </properties>
+  
   <!-- 
     struts2-spring-plugin 에서 적절한 Spring 버전을 가져오긴하지만,
     이 테스트 프로젝트에서는 Spring 버전을 최신으로 관리해보기 위해서 BOM 프로젝트를 추가했습니다.
