--- a/struts2-study-parent/pom.xml
+++ b/struts2-study-parent/pom.xml
@@ -45,9 +45,9 @@
     <module>../wildcard-method-selection/wildcard-method-selection-struts</module>
     <!-- 14. 테마 (v) -->
     <module>../themes/themes-struts</module>
-    <!-- 15. 스프링과 Struts 2 -->
+    <!-- 15. 스프링과 Struts 2 (v) -->
     <module>../spring-and-struts-2/spring-struts</module>
-    <!-- 16. 어노테이션 -->
+    <!-- 16. 어노테이션 (v) -->
     <module>../annotations/annotations-struts</module>
     <!-- 17. 인터셉터 입문 -->
     <module>../introducing-interceptors/interceptors-struts</module>
