--- a/struts2-study-parent/pom.xml
+++ b/struts2-study-parent/pom.xml
@@ -51,7 +51,7 @@
     <module>../annotations/annotations-struts</module>
     <!-- 17. 인터셉터 입문 (v) -->
     <module>../introducing-interceptors/interceptors-struts</module>
-    <!-- 18. 단위 테스트 -->
+    <!-- 18. 단위 테스트 (v) -->
     <module>../unit-testing/unit-testing-struts</module>
     <!-- 19. HTTP 세션 -->
     <module>../http-session/http-session-struts</module>
