Jetty12 버전업 이후 동작확인 - JSON
Jetty 12환경에서 webapp에다 바로둔 html을 읽지 못한다.
설정이 더 필요할 것 같은데.. 일단 Jetty 11로 둠. (json-strtus 예제)

--- a/struts2-study-parent/pom.xml
+++ b/struts2-study-parent/pom.xml
@@ -65,13 +65,13 @@
     <module>../jasper-reports-tutorial/jasper-reports-with-interceptor</module>
     <!-- 24. JasperReports 튜토리얼 : JasperReports 컴파일을 Servlet의 ContextListener로 처리 (v)-->
     <module>../jasper-reports-tutorial/jasper-reports-with-contextlistener</module>
-    <!-- 25. JSON 튜토리얼 - FlexJSON 예제 -->
+    <!-- 25. JSON 튜토리얼 - FlexJSON 예제 (v) -->
     <module>../json/json-customize-flexjson-struts</module>
-    <!-- 26. JSON 튜토리얼 - Jackson 예제 -->
+    <!-- 26. JSON 튜토리얼 - Jackson 예제 (v) -->
     <module>../json/json-customize-jackson-struts</module>
-    <!-- 27. JSON 튜토리얼 - Struts 2 JSON Plugin 예제 -->
+    <!-- 27. JSON 튜토리얼 - Struts 2 JSON Plugin 예제 (x) -->
     <module>../json/json-struts</module>
-    <!-- 28. 이중 평가 테스트 ( AliasInterceptor ) -->
+    <!-- 28. 이중 평가 테스트 ( AliasInterceptor ) (v) -->
     <module>../struts-double-evaluation-test</module>
   </modules>
 
