--- a/json/json-struts/pom.xml
+++ b/json/json-struts/pom.xml
@@ -18,6 +18,23 @@
   <name>${project.artifactId} - Struts 2 Study Maven Webapp</name>
   <url>https://github.com/fp024/struts2-study/tree/master/json</url>
 
+  <!-- 
+    TODO: Jetty 12에서는 webapp 경로의 html, js 등을 인식하지 못한다. 
+    일단 10 버전으로 내림 설정을 찾아봐야할 듯..
+  -->
+  <properties>
+    <jetty.version>${jetty10.version}</jetty.version>
+    <jetty-plugin-group-id>${jetty10-plugin-group-id}</jetty-plugin-group-id>
+    <jetty-plugin-artifact-id>${jetty10-plugin-artifact-id}</jetty-plugin-artifact-id>
+    
+    <jetty-root-jstl-group-id>${jetty10-root-jstl-group-id}</jetty-root-jstl-group-id>
+    <jetty-root-jstl-artifact-id>apache-jstl</jetty-root-jstl-artifact-id>
+    
+    <jetty-exclude-jstl-group-id>${jetty10-exclude-jstl-group-id}</jetty-exclude-jstl-group-id>
+    <jetty-exclude-jstl-artifact-id>${jetty10-exclude-jstl-artifact-id}</jetty-exclude-jstl-artifact-id>
+    <jetty-exclude-jstl-version>${jetty10-exclude-jstl-version}</jetty-exclude-jstl-version>
+  </properties>
+
   <dependencies>
     <!--
       https://struts.apache.org/plugins/config-browser/
