--- a/struts2-study-parent/pom.xml
+++ b/struts2-study-parent/pom.xml
@@ -15,6 +15,25 @@
   <artifactId>struts2-study-parent</artifactId>
   <packaging>pom</packaging>
 
+  <profiles>
+    <profile>
+      <id>jetty10</id>
+      <properties>
+        <jetty.version>${jetty10.version}</jetty.version>
+        <jetty-plugin-group-id>${jetty10-plugin-group-id}</jetty-plugin-group-id>
+        <jetty-plugin-artifact-id>${jetty10-plugin-artifact-id}</jetty-plugin-artifact-id>
+
+        <jetty-root-jstl-group-id>${jetty10-root-jstl-group-id}</jetty-root-jstl-group-id>
+        <jetty-root-jstl-artifact-id>apache-jstl</jetty-root-jstl-artifact-id>
+
+        <jetty-exclude-jstl-group-id>${jetty10-exclude-jstl-group-id}</jetty-exclude-jstl-group-id>
+        <jetty-exclude-jstl-artifact-id>${jetty10-exclude-jstl-artifact-id}
+        </jetty-exclude-jstl-artifact-id>
+        <jetty-exclude-jstl-version>${jetty10-exclude-jstl-version}</jetty-exclude-jstl-version>
+      </properties>
+    </profile>
+  </profiles>
+
   <!-- module에도 상대 경로 접근 방식으로 접근할 수 있다.-->
   <modules>
     <!-- 1. Struts 2 웹 어플리케이션을 만드는 방법 (v)-->
