--- a/pom.xml
+++ b/pom.xml
@@ -87,10 +87,10 @@
     <!-- <jettyContextPath>/${project.build.finalName}</jettyContextPath>-->
     <!-- 예제 프로젝트로서 개별 실행하므로 경로를 ContextPath로 나눌 필요는 없다. -->
     <jettyContextPath>/</jettyContextPath>
-    
-    <!-- 현시점 환경에서 다시 시도해봤을 때, Jetty 리로딩에 문제가 없어서 Enter를 누르면 재시작 되도록 0으로 설정을 바꾸었다. -->
+
+    <!-- Jetty 리로딩 기본 설정은 -1로 리로딩하지 않음으로 둔다. -->
     <!-- 그런데, 이 프로젝트는 아니고, 다른 스프링 프로젝트에서.. XML 기반 설정은 문제가 없는데, Java Config 기반 설정으로 하면 문제가 여전히 있다. -->
-    <jettyAutoDeploy>0</jettyAutoDeploy>
+    <jettyAutoDeploy>-1</jettyAutoDeploy>
 
     <!-- Maven Plugin 버전 -->
     <maven-clean-plugin.version>3.3.2</maven-clean-plugin.version>
