HSQLDB 메모리 주소로 변경

--- a/annotations/annotations-struts/src/main/resources/database.properties
+++ b/annotations/annotations-struts/src/main/resources/database.properties
@@ -1,4 +1,4 @@
 jdbc.driver=org.hsqldb.jdbc.JDBCDriver
-jdbc.url=jdbc:hsqldb:file:./file_db_temp/struts-study
+jdbc.url=jdbc:hsqldb:mem:struts-study-annotations
 jdbc.username=SA
 jdbc.password=
