--- a/pom.xml
+++ b/pom.xml
@@ -25,19 +25,16 @@
     
     
     <struts2.version>6.3.0.2</struts2.version>
-    <spring.platformVersion>5.3.32</spring.platformVersion>
+    <spring.platformVersion>5.3.33</spring.platformVersion>
     
     <struts2-junit5-user-custom-plugin.version>${project.version}</struts2-junit5-user-custom-plugin.version>
     
     
-    <log4j2.version>2.23.0</log4j2.version>
+    <log4j2.version>2.23.1</log4j2.version>
     
-    <jackson.version>2.16.1</jackson.version>
-    <jackson-databind.version>${jackson.version}</jackson-databind.version>
-    <!-- 
-      Struts에서 Jackson Databind를 따로 프로퍼티를 땃는지 이해가 안갔는데, 
-      jackson-databind 만 마이크로 보안패치가 잦은 편이여서, 따로 딴 것 같다.
-    -->
+    <!-- Jackson 버전이 뒤섞이는 경우가 있어서 jackson-bom을 추가했다. -->
+    <jackson.version>2.17.0</jackson.version>
+    
     <flexjson.version>3.3</flexjson.version>
 
     <hikaricp.version>5.1.0</hikaricp.version>
@@ -104,7 +101,7 @@
     <maven-toolchains-plugin.version>3.1.0</maven-toolchains-plugin.version>
     
     <!-- Struts JUnit Plugin -->
-    <commons-compress.version>1.26.0</commons-compress.version>
+    <commons-compress.version>1.26.1</commons-compress.version>
     <portlet-api.version>3.0.1</portlet-api.version>
   </properties>
 
@@ -129,6 +126,12 @@
         <artifactId>log4j-bom</artifactId>
         <version>${log4j2.version}</version>
         <scope>import</scope>
+        <type>pom</type>
+      </dependency>      
+      <dependency>
+        <groupId>com.fasterxml.jackson</groupId>
+        <artifactId>jackson-bom</artifactId>
+        <version>${jackson.version}</version>
         <type>pom</type>
       </dependency>
       <dependency>
