--- a/pom.xml
+++ b/pom.xml
@@ -24,39 +24,40 @@
     <javax.servlet.jsp-api.version>2.3.3</javax.servlet.jsp-api.version>
     
     
-    <struts2.version>6.6.0</struts2.version>
+    <struts2.version>6.7.0</struts2.version>
     <spring.platformVersion>5.3.39</spring.platformVersion>
     
     <struts2-junit5-user-custom-plugin.version>${project.version}</struts2-junit5-user-custom-plugin.version>
     
     
-    <log4j2.version>2.23.1</log4j2.version>
+    <log4j2.version>2.24.2</log4j2.version>
     
     <!-- Jackson 버전이 뒤섞이는 경우가 있어서 jackson-bom을 추가했다. -->
-    <jackson.version>2.17.2</jackson.version>
+    <jackson.version>2.18.2</jackson.version>
     
     <flexjson.version>3.3</flexjson.version>
 
-    <hikaricp.version>5.1.0</hikaricp.version>
+    <hikaricp.version>6.2.1</hikaricp.version>
     <hibernate.version>5.6.15.Final</hibernate.version>
-    <hsqldb.version>2.7.3</hsqldb.version>
+    <hsqldb.version>2.7.4</hsqldb.version>
 
     <javax.annotation-api.version>1.3.2</javax.annotation-api.version>
 
-    <jasperreports.version>6.21.3</jasperreports.version>
+    <jasperreports.version>6.21.4</jasperreports.version>
 
-    <lombok.version>1.18.34</lombok.version>
+    <lombok.version>1.18.36</lombok.version>
 
-    <junit.version>5.11.0</junit.version>
-    <mockito.version>5.12.0</mockito.version>
+    <junit.version>5.11.3</junit.version>
+    <mockito.version>5.14.2</mockito.version>
     <hamcrest.version>3.0</hamcrest.version>
     <assertj.version>3.26.3</assertj.version>
 
     <!-- struts2-convention-plugin에서 Java 17 바이트 코드 해석을 못해서, 버전을 올렸다. -->
-    <asm.version>9.7</asm.version>
+    <asm.version>9.7.1</asm.version>
 
+    <byte-buddy.version>1.15.10</byte-buddy.version>
 
-    <jetty.version>12.0.12</jetty.version>
+    <jetty.version>12.0.15</jetty.version>
     <jetty-plugin-group-id>org.eclipse.jetty.ee8</jetty-plugin-group-id>
     <jetty-plugin-artifact-id>jetty-ee8-maven-plugin</jetty-plugin-artifact-id>
     
@@ -69,7 +70,7 @@
     <jetty-exclude-jstl-version>1.2.5</jetty-exclude-jstl-version>
 
 
-    <jetty10.version>10.0.23</jetty10.version>
+    <jetty10.version>10.0.24</jetty10.version>
     <jetty10-plugin-group-id>org.eclipse.jetty</jetty10-plugin-group-id>
     <jetty10-plugin-artifact-id>jetty-maven-plugin</jetty10-plugin-artifact-id>
     
@@ -93,8 +94,8 @@
     <maven-clean-plugin.version>3.4.0</maven-clean-plugin.version>
     <maven-resources-plugin.version>3.3.1</maven-resources-plugin.version>
     <maven-compiler-plugin.version>3.13.0</maven-compiler-plugin.version>
-    <maven-surefire-plugin.version>3.4.0</maven-surefire-plugin.version>
-    <maven-failsafe-plugin.version>3.4.0</maven-failsafe-plugin.version>
+    <maven-surefire-plugin.version>3.5.2</maven-surefire-plugin.version>
+    <maven-failsafe-plugin.version>3.5.2</maven-failsafe-plugin.version>
     <maven-war-plugin.version>3.4.0</maven-war-plugin.version>
     <maven-install-plugin.version>3.1.3</maven-install-plugin.version>
     <maven-deploy-plugin.version>3.1.3</maven-deploy-plugin.version>
@@ -133,6 +134,11 @@
         <artifactId>jackson-bom</artifactId>
         <version>${jackson.version}</version>
         <type>pom</type>
+      </dependency>
+      <dependency>
+        <groupId>net.bytebuddy</groupId>
+        <artifactId>byte-buddy</artifactId>
+        <version>${byte-buddy.version}</version>
       </dependency>
       <dependency>
         <groupId>org.junit</groupId>
@@ -242,13 +248,26 @@
           </toolchains>
         </configuration>
       </plugin>
-      
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId> 
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <compilerArgs>
+            <arg>-Xlint:all</arg>
+          </compilerArgs>
+          <parameters>true</parameters>
+          <showWarnings>true</showWarnings>
+          <showDeprecation>true</showDeprecation>
+        </configuration>
+      </plugin>
+
       <!-- 
         java.lang.reflect.InaccessibleObjectException: 
         Unable to make field private static final java.util.concurrent.ConcurrentMap 
         java.util.ResourceBundle.cacheList accessible: 
         module java.base does not "opens java.util" to unnamed module 관련 처리
-      -->      
+      -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>        
@@ -257,7 +276,8 @@
             --add-opens=java.base/java.util=ALL-UNNAMED
           </argLine>
         </configuration>        
-      </plugin>      
+      </plugin>
+
     </plugins>
   </build>
   
