--- a/plugins/struts2-junit5-user-custom-plugin/.gitignore
+++ b/plugins/struts2-junit5-user-custom-plugin/.gitignore
@@ -35,7 +35,8 @@ build/
 !**/src/test/**/build/
 
 ### VS Code ###
-.vscode/
+.vscode/*
+!vscode/settings.json
 bin/
 .apt_generated_tests/
 .factorypath
