annotations 예제 수정 (#11)

--- a/annotations/annotations-struts/pom.xml
+++ b/annotations/annotations-struts/pom.xml
@@ -70,9 +70,9 @@
 
     <!-- @Resource 또는 @Inject 사용시 추가 필요.-->
     <dependency>
-      <groupId>javax.annotation</groupId>
-      <artifactId>javax.annotation-api</artifactId>
-      <version>${javax.annotation-api.version}</version>
+      <groupId>jakarta.annotation</groupId>
+      <artifactId>jakarta.annotation-api</artifactId>
+      <version>${jakarta.annotation-api.version}</version>
     </dependency>
 
     <dependency>
@@ -99,8 +99,8 @@
     </dependency>
 
     <dependency>
-      <groupId>org.hibernate</groupId>
-      <artifactId>hibernate-entitymanager</artifactId>
+      <groupId>org.hibernate.orm</groupId>
+      <artifactId>hibernate-core</artifactId>
       <version>${hibernate.version}</version>
     </dependency>
 
