--- a/pom.xml
+++ b/pom.xml
@@ -20,11 +20,6 @@
     <maven.compiler.target>${java.version}</maven.compiler.target>
 
     <!-- Servlet 버전 -->
-    <!--
-    <javax.servlet-api.version>4.0.1</javax.servlet-api.version>
-    <javax.servlet.jsp-api.version>2.3.3</javax.servlet.jsp-api.version>
-    -->
-
     <jakarta.servlet-api.version>6.0.0</jakarta.servlet-api.version>
     <jakarta.servlet.jsp-api.version>3.1.0</jakarta.servlet.jsp-api.version>
 
@@ -46,15 +41,14 @@
     <hibernate.version>6.6.13.Final</hibernate.version>
     <hsqldb.version>2.7.4</hsqldb.version>
 
-    <!-- <javax.annotation-api.version>1.3.2</javax.annotation-api.version> -->
-    <javax.annotation-api.version>2.1.1</javax.annotation-api.version>
+    <jakarta.annotation-api.version>2.1.1</jakarta.annotation-api.version>
 
     <jasperreports.version>6.21.4</jasperreports.version>
 
     <lombok.version>1.18.38</lombok.version>
 
     <junit.version>5.12.1</junit.version>
-    <mockito.version>5.17.9</mockito.version>
+    <mockito.version>5.17.0</mockito.version>
     <hamcrest.version>3.0</hamcrest.version>
     <assertj.version>3.27.3</assertj.version>
 
@@ -64,7 +58,7 @@
     <byte-buddy.version>1.17.5</byte-buddy.version>
 
     <jetty.version>12.0.19</jetty.version>
-    <jetty-plugin-group-id>org.eclipse.jetty.ee8</jetty-plugin-group-id>
+    <jetty-plugin-group-id>org.eclipse.jetty.ee10</jetty-plugin-group-id>
     <jetty-plugin-artifact-id>jetty-ee10-maven-plugin</jetty-plugin-artifact-id>
     
     <jetty-root-jstl-group-id>org.eclipse.jetty.ee10</jetty-root-jstl-group-id>
