http-session 예제 마이그레이션 (#11)

--- a/http-session/http-session-struts/pom.xml
+++ b/http-session/http-session-struts/pom.xml
@@ -26,9 +26,9 @@
 
     <!-- @Resource 또는 @Inject 사용시 추가 필요.-->
     <dependency>
-      <groupId>javax.annotation</groupId>
-      <artifactId>javax.annotation-api</artifactId>
-      <version>${javax.annotation-api.version}</version>
+      <groupId>jakarta.annotation</groupId>
+      <artifactId>jakarta.annotation-api</artifactId>
+      <version>${jakarta.annotation-api.version}</version>
     </dependency>
 
     <dependency>
